syntax = "proto3";

option go_package = "./pb";

package rainbowmist;

// The Wallet service definition.
service Rainbowmist {
    rpc GetPrice (GetPriceRequest) returns (GetPriceReply) {}
    rpc GetUSDPrice (GetUSDPriceRequest) returns (GetPriceReply) {}
}

message GetPriceRequest {
    string base_asset = 1;
    string quote_asset = 2;
}

message GetUSDPriceRequest {
    string asset = 1;
}

message GetPriceReply {
    double price = 1;
}